# QueryForge

./: .env.example  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
src/queryforge/: __init__.py  cli.py  config.py  core.py  executor.py  utils.py
tests/: test_cli.py  test_core.py  test_executor.py
