[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "queryforge"
version = "0.2.0"
description = "Natural language to SQL — no LLM required"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Officethree Technologies", email = "hello@officethree.com" },
]
keywords = ["sql", "nlp", "natural-language", "query", "database"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
queryforge = "queryforge.cli:main"

[project.urls]
Homepage = "https://github.com/MukundaKatta/QueryForge"
Repository = "https://github.com/MukundaKatta/QueryForge"
Issues = "https://github.com/MukundaKatta/QueryForge/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/queryforge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
